fixed bugs for recycler view and created detail screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,18 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".articles.ArticlesActivity"
+            android:name=".articles.ui.list.ArticlesActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".articles.ui.detail.ArticleDetailActivity"
+            android:label="@string/app_name">
         </activity>
     </application>
 
