--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".HeadlinesApp"
+        android:name="com.monzo.HeadlinesApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".articles.ui.list.ArticlesActivity"
+            android:name="com.monzo.articles.ui.list.ArticlesActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
         </activity>
 
         <activity
-            android:name=".articles.ui.detail.ArticleDetailActivity"
+            android:name="com.monzo.articles.ui.detail.ArticleDetailActivity"
             android:label="@string/app_name">
         </activity>
     </application>
